--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Get Examples</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HKHTZLH4R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5HKHTZLH4R');
+    </script>
+    <title>Get-Subtitles</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
